Code cleanup, migrate to java 21